argocd-declarative/manifests/prometheus-app/prometheus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus
#          image: prom/prometheus:v2.52.0
          image: prom/prometheus:latest
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/prometheus/prometheus.yml
#            - --web.enable-remote-write-receiver
            - --enable-feature=exemplar-storage
          ports:
            - containerPort: 9090
#              protocol: TCP
#          resources:
#            limits:
#              memory: "700Mi"
          volumeMounts:
            - name: prometheus-vol
              mountPath: /prometheus
            - name: prometheus-config
#              mountPath: /etc/prometheus                   # it will remove the directory and just map this file,
              mountPath: /etc/prometheus/prometheus.yml    # this will only mount this file and rest will keep intact
              subPath: prometheus.yml
      restartPolicy: Always
      volumes:
        - name: prometheus-config
          configMap:
            name: prometheus-config
            items:
#              - key: "prometheus.kubernetes.yml"
              - key: "prometheus.yml"
                path: "prometheus.yml"
        - name: prometheus-vol
          persistentVolumeClaim:
#            claimName: rabbitmq-pvc-local
            claimName: prometheus-pvc-nfs-sc
