argocd-declarative/manifests/prometheus-app/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
#      nodePort: 32009
#  type: NodePort
  type: ClusterIP
