argocd-declarative/manifests/prometheus-app/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.int.taqniat.ae
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-svc
                port:
                  number: 9090
